// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList shows features when using /github subscribe list features 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`, \`releases\`, \`comments\`, \`reviews\`, \`format:full\`


<https://github.com/bkeepers/dotenv|bkeepers/dotenv>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`, \`releases\`, \`format:full\`

",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 accounts",
      "text": "<https://github.com/atom|atom>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`, \`releases\`, \`format:full\`


<https://github.com/kubernetes|kubernetes>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits:all\`, \`releases\`, \`format:full\`

",
      "title": "Subscribed to the following accounts",
    },
    Object {
      "color": "#24292f",
      "footer": "<https://github.com/integrations/slack#configuration|Learn More>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for multiple subscriptions active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 accounts",
      "text": "<https://github.com/atom|atom>
<https://github.com/kubernetes|kubernetes>",
      "title": "Subscribed to the following accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for no subscriptions active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Not subscribed to any repositories or accounts",
      "title": "Not subscribed to any repositories or accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscriptionList works for one subscription active in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 repository",
      "text": "<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 account",
      "text": "<https://github.com/kubernetes|kubernetes>",
      "title": "Subscribed to the following accounts",
    },
  ],
  "response_type": "in_channel",
}
`;
